[package]
name = "multidirection-backend"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
bytestring = "1.1.0"

[[bin]]
name = "multidirection-backend"
path = "src/main.rs"
